@@ -106,6 +106,11 @@ allprojects {
         
         // Encryption library
         implementation('org.jasypt:jasypt:1.9.3:lite')
+        
+        // Test dependencies
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
+    	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     }
     
     compileJava {
@@ -118,6 +123,7 @@ allprojects {
     }
     
     test {
+    	useJUnitPlatform()
     	// Show test output in Gradle output, sometimes easier than opening the
     	// test reports in a browser
 	    testLogging {
@@ -256,7 +262,11 @@ task generateManpageAsciiDoc(type: JavaExec) {
 
 // Generate manpages from AsciiDoc generated by picocli
 task asciiDoctorManPage(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
-    dependsOn(generateManpageAsciiDoc)
+	dependsOn(generateManpageAsciiDoc)
+	inProcess = JAVA_EXEC
+	forkOptions {
+        jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
+    }
     sourceDir = file("${project.buildDir}/generated-docs/src/manpage")  
     outputDir = file("${project.buildDir}/generated-docs/manpage")
     logDocuments = true
@@ -280,6 +290,10 @@ task prepareAsciiDocForHtml(type: Copy) {
 // Generate stand-alone HTML documentation from AsciiDoc prepared by prepareAsciiDoc
 task asciiDoctorHtml(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
     dependsOn(prepareAsciiDocForHtml)
+    inProcess = JAVA_EXEC
+	forkOptions {
+        jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
+    }
     sourceDir = file("${project.buildDir}/generated-docs/src/html")
     outputDir = file("${project.buildDir}/generated-docs/html5")
     logDocuments = true
@@ -303,6 +317,10 @@ task asciiDoctorHtml(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
 // to be deployed to a version-specific directory on the fcli gh-pages site
 task asciidoctorJekyll(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
 	dependsOn(prepareAsciiDocForHtml)
+	inProcess = JAVA_EXEC
+	forkOptions {
+        jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
+    }
     sourceDir = file("${project.buildDir}/generated-docs/src/html")
     outputDir = file("${project.buildDir}/generated-docs/jekyll")
     logDocuments = true
@@ -326,6 +344,10 @@ task asciidoctorJekyll(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
 // Generate Jekyll HTML documentation from AsciiDoc files in doc-resources/asciidoc/gh-pages, 
 // to be deployed to the root directory on the fcli gh-pages site
 task asciidoctorGHPages(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
+	inProcess = JAVA_EXEC
+	forkOptions {
+        jvmArgs("--add-opens","java.base/sun.nio.ch=ALL-UNNAMED","--add-opens","java.base/java.io=ALL-UNNAMED")
+    }
     sourceDir = file("${project.rootDir}/doc-resources/asciidoc/gh-pages")
     outputDir = file("${project.buildDir}/generated-docs/gh-pages")
     logDocuments = true
@@ -340,7 +362,7 @@ task asciidoctorGHPages(type: org.asciidoctor.gradle.jvm.AsciidoctorTask) {
             'stylesheet'  : false,
             'bannertitle' : 'FCLI: The Universal Fortify CLI',
             'docversion'  : "[select]",
-            'revnumber'   : null
+            'revnumber'   : "none"
     ]
     options = [
     	'template_dirs': [new File("${project.rootDir}/doc-resources/asciidoc/templates").absolutePath]
